--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -10,7 +10,7 @@
     <div class="editform-row">
       <div class="editform-row-block">
         <div class="editform-label">Szüks. áramerősség</div>
-        <input type="text" class="editform-edit em6width" id="szuksaram"
+        <input type="text" class="editform-edit em6width" appAutofocus id="szuksaram"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
       </div>
