--- a/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
+++ b/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
@@ -7,7 +7,7 @@
       <div class="editform-row">
         <div>
           <div class="editform-label">Bizonylatszám</div>
-          <input type="text" class="editform-edit em10width" formControlName="bizonylatszam">
+          <input type="text" class="editform-edit em10width" appAutofocus formControlName="bizonylatszam">
         </div>
       </div>
     </ng-container>
