--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -29,7 +29,7 @@
       <div class="editform-row">
         <div class="editform-row-block">
             <div class="editform-label">Pénztár</div>
-            <input type="text" class="editform-edit em15width" formControlName="penztar">
+            <input type="text" class="editform-edit em15width" appAutofocus formControlName="penztar">
         </div>
 
         <div class="editform-row-block">
