--- a/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-card">
       <div class="editform-row">
           <div class="editform-label">Megnevezés</div>
-          <input type="text" class="editform-edit zoomedit cikkwidth" formControlName="megnevezes">
+          <input type="text" class="editform-edit zoomedit cikkwidth" appAutofocus formControlName="megnevezes">
           <button class="toolbutton" (click)="CikkZoom()" type="button">...</button>
       </div>
 
