--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -6,7 +6,7 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Megnevezés</div>
-        <input type="text" class="editform-edit cikkwidth" formControlName="megnevezes">
+        <input type="text" class="editform-edit cikkwidth" appAutofocus formControlName="megnevezes">
       </div>
 
       <div class="editform-row">
