--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Csoport</div>
-      <input type="text" class="editform-edit primitivwidth" formControlName="csoport">
+      <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="csoport">
     </div>
 
     <div class="editform-row-bottom">
