--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -14,7 +14,7 @@
     <div class="editform-row">
       <div class="editform-label">Megjegyzés</div>
       <div class="editform-label" style="color: red">Ha ez a mező üresen marad, automatikusan az eredeti fájlnév kerül a megjegyzésbe.</div>
-      <input type="text" class="editform-edit megjegyzeswidth" formControlName="megjegyzes">
+      <input type="text" class="editform-edit megjegyzeswidth" appAutofocus formControlName="megjegyzes">
     </div>
 
     <div class="editform-row-bottom">
