--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -21,7 +21,7 @@
 
       <div class="editform-row">
         <div class="editform-label">Irattipus</div>
-        <input type="text" class="editform-edit zoomedit em10width" formControlName="irattipus">
+        <input type="text" class="editform-edit zoomedit em10width" appAutofocus formControlName="irattipus">
         <button class="toolbutton" type="button" (click)="IrattipusZoom()">...</button>
       </div>
     </div>
