--- a/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
+++ b/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
@@ -14,7 +14,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Összeg</div>
-        <input type="number" class="editform-number" formControlName="osszeg">
+        <input type="number" class="editform-number" appAutofocus formControlName="osszeg">
       </div>
     </div>
 
