--- a/src/app/logon/jelszocsere/jelszocsere.component.html
+++ b/src/app/logon/jelszocsere/jelszocsere.component.html
@@ -5,7 +5,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Régi jelszó</div>
-        <input type="password" class="editform-edit passwordwidth" formControlName="regijelszo">
+        <input type="password" class="editform-edit passwordwidth" appAutofocus formControlName="regijelszo">
     </div>
 
     <div class="editform-row">
