--- a/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
+++ b/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
@@ -5,7 +5,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Bizonylatkép iratkód</div>
-        <input type="number" class="editform-number" formControlName="bizonylatkepiratkod">
+        <input type="number" class="editform-number" appAutofocus formControlName="bizonylatkepiratkod">
     </div>
 
     <div class="editform-row">
