--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -15,7 +15,7 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Azonosító</div>
-        <input type="text" class="editform-edit em15width" formControlName="azonosito">
+        <input type="text" class="editform-edit em15width" appAutofocus formControlName="azonosito">
       </div>
       <div class="editform-row">
         <div class="editform-label">Jelszó</div>
