--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -6,7 +6,7 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="editform-edit em15width" formControlName="nev">
+        <input type="text" class="editform-edit em15width" appAutofocus formControlName="nev">
       </div>
       <div class="editform-row">
         <div class="editform-label">Irányítószám</div>
