--- a/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
+++ b/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
@@ -5,7 +5,7 @@
     <div class="editform-card">
       <div class="editform-row">
           <div class="editform-label">Ajánlat iratkód</div>
-          <input type="number" class="editform-number" formControlName="ajanlatiratkod">
+          <input type="number" class="editform-number" appAutofocus formControlName="ajanlatiratkod">
       </div>
     </div>
 
