--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -5,7 +5,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Új volume max. méret</div>
-        <input type="number" class="editform-number" formControlName="ujvolumemaxmeret">
+        <input type="number" class="editform-number" appAutofocus formControlName="ujvolumemaxmeret">
     </div>
 
     <div class="editform-row">
