--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">ÁFA kulcs</div>
-      <input type="text" class="editform-edit primitivwidth" formControlName="afakulcs">
+      <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="afakulcs">
     </div>
     <div class="editform-row">
       <div class="editform-label">Az ÁFA mértéke, %</div>
