--- a/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
@@ -5,7 +5,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Jelszó</div>
-      <input type="password" class="editform-edit passwordwidth" formControlName="jelszo">
+      <input type="password" class="editform-edit passwordwidth" appAutofocus formControlName="jelszo">
     </div>
 
     <div class="editform-row">
