--- a/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Fizetési mód</div>
-      <input type="text" class="editform-edit primitivwidth" formControlName="fizetesimod">
+      <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="fizetesimod">
     </div>
 
     <div class="editform-row-bottom">
