--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Irattipus</div>
-      <input type="text" class="editform-edit primitivwidth" formControlName="irattipus">
+      <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="irattipus">
     </div>
 
     <div class="editform-row-bottom">
