--- a/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
+++ b/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Mennyiségi egység</div>
-      <input type="text" class="editform-edit primitivwidth" formControlName="me">
+      <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="me">
     </div>
 
     <div class="editform-row-bottom">
