--- a/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
+++ b/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Pénznem</div>
-      <input type="text" class="editform-edit penznemwidth" formControlName="penznem">
+      <input type="text" class="editform-edit penznemwidth" appAutofocus formControlName="penznem">
     </div>
 
     <div class="editform-row-bottom">
