--- a/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
+++ b/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Leírás</div>
-      <input type="text" class="editform-edit megjegyzeswidth" formControlName="leiras">
+      <input type="text" class="editform-edit megjegyzeswidth" appAutofocus formControlName="leiras">
     </div>
 
     <div class="editform-row-bottom">
