--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="editform-edit ugyfelwidth" formControlName="nev">
+        <input type="text" class="editform-edit ugyfelwidth" appAutofocus formControlName="nev">
       </div>
 
       <div class="editform-row">
