--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Pénztár</div>
-      <input type="text" class="editform-edit em15width" formControlName="penztar">
+      <input type="text" class="editform-edit em15width" appAutofocus formControlName="penztar">
     </div>
 
     <div class="editform-row">
