--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
         <div class="editform-label">KT</div>
-        <input type="text" class="editform-edit primitivwidth" formControlName="kt">
+        <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="kt">
     </div>
     <div class="editform-row">
         <div class="editform-label">Megnevezés</div>
