--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Összeg</div>
-        <input type="number" class="editform-number" formControlName="osszeg">
+        <input type="number" class="editform-number" appAutofocus formControlName="osszeg">
       </div>
 
     <div class="editform-row">
