--- a/src/app/ugyfel/ugyfeltoolbar/ugyfeltoolbar.component.html
+++ b/src/app/ugyfel/ugyfeltoolbar/ugyfeltoolbar.component.html
@@ -7,7 +7,7 @@
     <option *ngFor="let sz of Szurok; let i = index" [value]="i" [selected]="i == _szempont">{{sz}}</option>
   </select>
 
-  <input [disabled]="!enKereses" #Minta type="text" class="tooledit em10width">
+  <input [disabled]="!enKereses" #Minta type="text" class="tooledit em10width" appAutofocus>
 
   <button [disabled]="!enKereses" (click)="doKereses()" class="toolbutton" type="button">
     <i class="fa fa-search" aria-hidden="true"></i>
