--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -1,43 +1,39 @@
 <div class="alapkeret">
-  <div class="editform-row">
-      <div class="editform-label">{{item.TetelTipus}}</div>
-      <input type="text" class="editform-edit zoomedit cikkwidth" appAutofocus id="cikk"
-             maxlength="100" autocomplete="off"
-             [(ngModel)]="item.CikkNev" name="cikk">
-      <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
-  </div>
-
-  <div class="editform-row">
-    <div class="editform-row-block">
-      <div class="editform-label">Mennyiség</div>
-      <input type="number" class="editform-number" id="mennyiseg"
-             [(ngModel)]="item.Mennyiseg" name="mennyiseg">
+  <div [formGroup]="formTetel" autocomplete="off">
+    <div class="editform-row">
+        <div class="editform-label">{{item.TetelTipus}}</div>
+        <input type="text" class="editform-edit zoomedit cikkwidth" appAutofocus formControlName="cikk">
+        <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
     </div>
 
-    <div class="editform-row-block">
-      <div class="editform-label">Egységár</div>
-      <input type="number" class="editform-number" id="egysegar"
-             [(ngModel)]="item.EgysegAr" name="egysegar">
-    </div>
-  </div>
+    <div class="editform-row">
+      <div class="editform-row-block">
+        <div class="editform-label">Mennyiség</div>
+        <input type="number" class="editform-number" formControlName="mennyiseg">
+      </div>
 
-  <div class="editform-row">
-    <div class="editform-row-block">
-      <div class="editform-label">Egys. teljesítmény</div>
-      <input type="number" class="editform-number" id="egysegnyi"
-             [(ngModel)]="item.EgysegnyiTeljesitmeny" name="egysegnyi">
+      <div class="editform-row-block">
+        <div class="editform-label">Egységár</div>
+        <input type="number" class="editform-number" formControlName="egysegar">
+      </div>
     </div>
 
-    <div class="editform-row-block">
-      <div class="editform-label">Garancia</div>
-      <input type="number" class="editform-number" id="garancia"
-             [(ngModel)]="item.Garancia" name="garancia">
-    </div>
-  </div>
+    <div class="editform-row">
+      <div class="editform-row-block">
+        <div class="editform-label">Egys. teljesítmény</div>
+        <input type="number" class="editform-number" formControlName="egysegnyi">
+      </div>
 
-  <div class="editform-row-bottom">
-    <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
-    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
+      <div class="editform-row-block">
+        <div class="editform-label">Garancia</div>
+        <input type="number" class="editform-number" formControlName="garancia">
+      </div>
+    </div>
+
+    <div class="editform-row-bottom">
+      <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
+      <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
+    </div>
   </div>
 
 <!--  export eAjanlatSzerkesztesModeMode {
