--- a/src/app/ajanlat/ajanlat-tabla/ajanlat-tabla.component.html
+++ b/src/app/ajanlat/ajanlat-tabla/ajanlat-tabla.component.html
@@ -2,7 +2,7 @@
 <table>
   <thead>
     <tr>
-      <th>Tételtipus</th>
+      <th style="width: 10em">Tételtipus</th>
       <th>Cikk</th>
       <th>Mennyiség</th>
       <th>Egységár</th>
