--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -47,11 +47,11 @@
           <input type="text" class="editform-edit ugyfelwidth" formControlName="kuldo">
         </div>
       </ng-container>
+    </div>
 
-      <div class="editform-row">
-        <div class="editform-label">Tárgy</div>
-        <input type="text" class="editform-edit megjegyzeswidth" formControlName="targy">
-      </div>
+    <div class="editform-row-bottom">
+      <div class="editform-label">Tárgy</div>
+      <input type="text" class="editform-edit megjegyzeswidth" formControlName="targy">
     </div>
 
     <div class="editform-row-bottom">
