--- a/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
+++ b/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
@@ -38,6 +38,9 @@
           <button (click)="doNav(100)" class="toolbutton" [disabled]="csakProjekt">
             Projekthez rendelés
           </button>
+          <button (click)="doNav(100)" class="toolbutton">
+            Zárás/nyitás
+          </button>
         </div>
       </ng-container>
 
